<resources>
    <string name="app_name">Tugas3</string>
    <string name="logo_text">Aplikasiku</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="reset_code">Reset Code</string>
    <string name="enter_your_reset_code">Enter Your Reset Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_request">Send Request</string>
    <string name="change_password">Change Password</string>

    <string name="judul_reset_password">Reset Password</string>
    <string name="subJudul_reset_password">Reset code was sent to your email. Please enter the code and create new password.</string>
    <string name="enter_new_password">Enter Your New Password</string>
    <string name="enter_confirm_password">Enter Your Confirm Password</string>
    <string name="judul_forgot_password">Forgot Password</string>
    <string name="subJudul_forgot_password">Please enter your email below to receive your password reset instructions</string>
    <string name="judul_successfull">Successful!!!</string>
    <string name="subJudul_succesfull">You have successfully changed password. Please use your new passwords when logging in</string>
</resources>